fix for overflowing icons

--- a/shared/ui/styles/codemark-form.less
+++ b/shared/ui/styles/codemark-form.less
@@ -213,7 +213,8 @@
 	cursor: pointer;
 	&.ellipsis-left-container {
 		height: 1.4em;
-		overflow: hidden;
+		// overflow-x: hidden;
+		white-space: nowrap;
 		display: flex;
 	}
 	&.ellipsis-right-container {
